# plutonian-shores

./: Cargo.toml  README.md  TODO.md  install.sh  plutonian-shores.charon  update_versions.py
charon/: Cargo.toml  charon.charon  charon.toml
charon/data/: charon.toml  empty_test.toml  index.charon  test.toml
charon/src/: charon_file_creator.rs  installation_cmd.rs  installer.rs  main.rs
cocytus/: Cargo.toml  cocytus.charon
cocytus/src/: _main.rs  main.rs  query_command.rs
data/: cargo-test.sh  install.sh  plutonian-shores.toml
files/: cargo-test.sh  install.sh  plutonian-shores.toml
lethe/: Cargo.toml  lethe.charon
lethe/src/: main.rs  remove_command.rs
pt_core/: Cargo.toml
pt_core/src/: lib.rs  query.rs  query_result.rs  utils.rs
pt_core/src/query_manager/: mod.rs  pkg_selector.rs  query_results.rs
src/: cocytus.rs  help.rs  lethe.rs  styx.rs
src/commands/: __install_command.rs  install_command.rs  mod.rs  query_command.rs  remove_command.rs
src/help/: styx.help
src/query_manager/: mod.rs  pkg_selector.rs  query_results.rs
styx/: Cargo.toml  styx.charon  styx.toml
styx/src/: install_command.rs  main.rs
tests/config/: plutonian-shores.toml
