[package]
name = "plutonian-shores"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.6"
mythos-core = { version = "0.1.0", path = "../mythos-core" }
rust-fuzzy-search = "0.1.1"

[[bin]]
name = "styx"
path = "src/styx.rs"
