[package]
name = "charon"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mythos-core = { version = "0.1.0", path = "../../mythos-core" }
pt_core = { version = "0.1.0", path = "../pt_core" }
duct = "0.13.6"
glob = "0.3.1"
serde = "1.0.189"
serde_derive = "1.0.189"
toml = "0.8.2"

