[package]
name = "cocytus"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mythos-core = { version = "0.1.0", path = "../../mythos-core" }
pt_core = { version = "0.1.0", path = "../pt_core" }
duct = "0.13.6"
