[package]
name = "lethe"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mythos-core = { version = "0.1.0", path = "../../mythos-core" }
pt_core = { version = "0.1.0", path = "../pt_core" }
duct = "0.13.6"
